k8s/base/digital-twin/simulator.yaml
apiVersion: v1
kind: Service
metadata:
  name: simulator
spec:
  ports:
    - port: 4000
      targetPort: 4000
  selector:
    app: simulator
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simulator
spec:
  selector:
    matchLabels:
      app: simulator
  template:
    metadata:
      labels:
        app: simulator
    spec:
      # nodeSelector:
      #  role: worker
      containers:
        - name: simulator
          image: predictivemovement/digital-twin-simulator
          resources:
            requests:
              cpu: "1"
              memory: "1Gi"
          ports:
            - containerPort: 4000
          volumeMounts:
            - mountPath: /app/.cache
              name: cache-volume
      volumes:
        - name: cache-volume
          emptyDir:
            sizeLimit: 5Gi
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simulator-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.org/websocket-services: "simulator"
spec:
  tls:
    - hosts:
        - tvilling-stage.predictivemovement.com
#        - helsingborg-stage.predictivemovement.com # Legacy.
#        - rorla-stage.predictivemovement.com # Legacy.
      secretName: tvilling-stage-tls
  rules:
    - host: tvilling-stage.predictivemovement.com
      http:
        paths:
          - path: /socket.io
            pathType: Prefix
            backend:
              service:
                name: simulator
                port:
                  number: 4000
#    - host: helsingborg-stage.predictivemovement.com
#      http:
#        paths:
#          - path: /socket.io
#            pathType: Prefix
#            backend:
#              service:
#                name: simulator
#                port:
#                  number: 4000
#    - host: rorla-stage.predictivemovement.com
#      http:
#        paths:
#          - path: /socket.io
#            pathType: Prefix
#            backend:
#              service:
#                name: simulator
#                port:
#                  number: 4000
